--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,7 +4,8 @@ on:
   schedule:
     # Runs every day at midnight UTC
     - cron: '0 0 * * *'
-
+  workflow_dispatch:
+  
 jobs:
   run-script:
     runs-on: ubuntu-latest
