--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,10 +21,10 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
+        pip3 install -r requirements.txt
 
     - name: Run Python script
       env:
         DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
       run: |
-        python main.py
+        python3 main.py
