--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,24 +7,21 @@ on:
   workflow_dispatch:
   
 jobs:
-  run-script:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.x'  # Use the desired Python version
-
-    - name: Install dependencies
-      run: |
-        pip3 install -r requirements.txt
-
-    - name: Run Python script
-      env:
-        DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
-      run: |
-        python3 main.py
+      - uses: actions/checkout@v3
+      - name: setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10' # install the python version needed
+          
+      - name: Install dependencies
+        uses: py-actions/py-dependency-install@v4
+        with:
+              path: "requirements.txt"
+      - name: Run Python script
+        env:
+          DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
+        run: |
+          python3 main.py
