--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,6 +23,9 @@ jobs:
       run: |
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip list  # Print installed packages for debugging
+        pip install poetry
+        poetry install --no-interaction --all-extras
+        poetry add requests
 
     - name: Run Python script
       env:
