--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,9 +15,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install Python dependencies
-      uses: py-actions/py-dependency-install@v4
-      with:
-        path: "requirements.txt"
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
     - name: Run Python script
       env:
         DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
