--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,7 +3,7 @@ name: Run Python script daily
 on:
   schedule:
     # Runs every minute
-    - cron: '* * * * *'
+    - cron: '0 4 * * *'
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
